k8s/overlays/nonprod-data/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: data-default-deny-ingress
spec:
  podSelector: {}
  policyTypes: [Ingress]
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-nonprod-trading-dependencies
spec:
  podSelector:
    matchExpressions:
      - key: app.kubernetes.io/name
        operator: In
        values: [redis, redis-sentinel, kafka, postgres]
  policyTypes: [Ingress]
  ingress:
    - from:
        - namespaceSelector:
            matchExpressions:
              - key: kubernetes.io/metadata.name
                operator: In
                values: [dev, test, perf, staging]
          podSelector:
            matchExpressions:
              - key: app.kubernetes.io/name
                operator: In
                values: [trading-api, trading-worker]
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: kafka-topics
      ports:
        - protocol: TCP
          port: 6379
        - protocol: TCP
          port: 26379
        - protocol: TCP
          port: 9092
        - protocol: TCP
          port: 5432
